--- a/app/app.css
+++ b/app/app.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
     position: absolute;
+    overflow-x: hidden;
 }
 
 .container-fluid {
@@ -34,6 +35,10 @@ body {
 
 span {
     cursor: default;
+}
+
+ul {
+    list-style: none;
 }
 
 .title span {
