--- a/app/side-bar/side-bar.css
+++ b/app/side-bar/side-bar.css
@@ -6,4 +6,14 @@
 
 .sidebar-nav > li {
     padding-bottom: 15px;
+    padding-right: 15px;
+    width: 100%;
+}
+
+.sidebar-nav > li > button {
+    width: 100%;
+    white-space: normal;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
 }
