--- a/app/mydocs-tag/mydocs-tag.css
+++ b/app/mydocs-tag/mydocs-tag.css
@@ -6,6 +6,7 @@
 .myDocs .doc {
     margin: 5px 0 0;
     padding: 0;
+    text-align: center;
     align-content: center;
     align-items: center;
     vertical-align: middle;
